[package]
name = "cs165"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
anyhow = "1.0.94"
atty = "0.2.14"
bincode = "1.3.3"
bitflags = "2.6.0"
bytemuck = "1.20.0"
csv = "1.3.1"
itertools = "0.13.0"
ndarray = { version = "0.16.1", features = ["serde"] }
once_cell = "1.20.2"
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
thiserror = "2.0.7"
